[gd_scene load_steps=7 format=3 uid="uid://crac6k3i1u8p4"]

[ext_resource type="Texture2D" uid="uid://b4quodieekqhi" path="res://Solaria Demo Update 01.png" id="1_ivvlv"]
[ext_resource type="Script" path="res://world.gd" id="1_qf26f"]
[ext_resource type="PackedScene" uid="uid://dgncc7yy3q50e" path="res://clearing.tscn" id="3_4eg3d"]
[ext_resource type="PackedScene" uid="uid://cxjl6pyb0l03j" path="res://buttons.tscn" id="5_ewvrq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ist8n"]
texture = ExtResource("1_ivvlv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
27:3/0 = 0
0:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
27:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
21:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
0:13/0 = 0
2:13/0 = 0
3:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
2:14/0 = 0
3:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
7:0/size_in_atlas = Vector2i(3, 3)
7:0/0 = 0
7:3/size_in_atlas = Vector2i(1, 2)
7:3/0 = 0

[sub_resource type="TileSet" id="TileSet_xrf12"]
sources/0 = SubResource("TileSetAtlasSource_ist8n")

[node name="World" type="Node2D"]
script = ExtResource("1_qf26f")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_xrf12")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(589844, 327680, 0, 589845, 327680, 0, 589846, 327680, 0, 655380, 327680, 0, 655381, 327680, 0, 655382, 327680, 0, 655383, 0, 0, 720918, 327680, 0, 720919, 0, 1, 786454, 327680, 0, 786455, 0, 2, 786456, 65536, 2, 786457, 131072, 2, 786458, 327680, 0, 851994, 327680, 0, 851990, 327680, 0, 851991, 327680, 0, 589849, 327680, 0, 458772, 327680, 0, 524308, 327680, 0, 720916, 327680, 0, 786452, 327680, 0, 851988, 327680, 0, 458773, 327680, 0, 524309, 327680, 0, 720917, 327680, 0, 786453, 327680, 0, 851989, 327680, 0, 458774, 327680, 0, 524310, 327680, 0, 458775, 327680, 0, 524311, 327680, 0, 589847, 327680, 0, 458776, 327680, 0, 524312, 327680, 0, 589848, 327680, 0, 655384, 65536, 0, 851992, 327680, 0, 458777, 327680, 0, 524313, 327680, 0, 655385, 131072, 0, 720921, 131072, 1, 851993, 327680, 0, 458778, 327680, 0, 524314, 327680, 0, 589850, 327680, 0, 655386, 327680, 0, 720922, 327680, 0, 458754, 327680, 0, 524290, 327680, 0, 589826, 327680, 0, 655362, 327680, 0, 720898, 327680, 0, 786434, 327680, 0, 851970, 327680, 0, 458755, 327680, 0, 524291, 0, 0, 589827, 0, 1, 655363, 0, 2, 720899, 327680, 0, 786435, 327680, 0, 851971, 327680, 0, 458756, 327680, 0, 524292, 65536, 0, 655364, 65536, 2, 720900, 327680, 0, 786436, 327680, 0, 851972, 327680, 0, 458757, 327680, 0, 524293, 131072, 0, 589829, 131072, 1, 655365, 131072, 2, 720901, 327680, 0, 786437, 327680, 0, 851973, 327680, 0, 458758, 327680, 0, 524294, 327680, 0, 589830, 327680, 0, 655366, 327680, 0, 720902, 327680, 0, 786438, 327680, 0, 851974, 327680, 0, 458759, 327680, 0, 524295, 327680, 0, 589831, 327680, 0, 655367, 327680, 0, 720903, 0, 0, 786439, 0, 1, 851975, 0, 2, 458760, 327680, 0, 524296, 327680, 0, 589832, 327680, 0, 655368, 327680, 0, 720904, 65536, 0, 851976, 65536, 2, 458761, 327680, 0, 524297, 327680, 0, 589833, 327680, 0, 655369, 327680, 0, 720905, 131072, 0, 786441, 131072, 1, 851977, 131072, 2, 1245195, 327680, 0, 1310731, 327680, 0, 1376267, 327680, 0, 1441803, 327680, 0, 1507339, 327680, 0, 1572875, 327680, 0, 1638411, 327680, 0, 1703947, 327680, 0, 1245196, 327680, 0, 1310732, 0, 0, 1376268, 0, 1, 1441804, 0, 2, 1507340, 327680, 0, 1572876, 327680, 0, 1638412, 327680, 0, 1703948, 327680, 0, 1245197, 327680, 0, 1310733, 65536, 0, 1441805, 65536, 2, 1507341, 327680, 0, 1572877, 327680, 0, 1638413, 327680, 0, 1703949, 327680, 0, 1245198, 327680, 0, 1310734, 131072, 0, 1376270, 131072, 1, 1441806, 131072, 2, 1507342, 327680, 0, 1572878, 327680, 0, 1638414, 327680, 0, 1703950, 327680, 0, 1245199, 327680, 0, 1310735, 327680, 0, 1376271, 327680, 0, 1441807, 327680, 0, 1507343, 327680, 0, 1572879, 327680, 0, 1638415, 327680, 0, 1703951, 327680, 0, 1245200, 327680, 0, 1310736, 327680, 0, 1376272, 327680, 0, 1441808, 327680, 0, 1507344, 327680, 0, 1572880, 327680, 0, 1638416, 327680, 0, 1703952, 327680, 0, 1245201, 327680, 0, 1310737, 327680, 0, 1376273, 327680, 0, 1441809, 327680, 0, 1507345, 327680, 0, 1572881, 327680, 0, 1638417, 327680, 0, 1703953, 327680, 0, 1245202, 327680, 0, 1310738, 327680, 0, 1376274, 327680, 0, 1441810, 327680, 0, 1507346, 327680, 0, 1572882, 327680, 0, 1638418, 327680, 0, 1703954, 327680, 0, 1245203, 327680, 0, 1310739, 327680, 0, 1376275, 327680, 0, 1441811, 327680, 0, 1507347, 327680, 0, 1572883, 327680, 0, 1638419, 327680, 0, 1703955, 327680, 0, 1179676, 327680, 0, 1245212, 327680, 0, 1310748, 327680, 0, 1376284, 327680, 0, 1441820, 327680, 0, 1507356, 327680, 0, 1572892, 327680, 0, 1179677, 327680, 0, 1245213, 327680, 0, 1310749, 327680, 0, 1376285, 327680, 0, 1441821, 327680, 0, 1507357, 327680, 0, 1572893, 327680, 0, 1179678, 327680, 0, 1245214, 327680, 0, 1310750, 327680, 0, 1376286, 327680, 0, 1441822, 327680, 0, 1507358, 327680, 0, 1572894, 327680, 0, 1179679, 327680, 0, 1245215, 327680, 0, 1310751, 0, 0, 1376287, 0, 1, 1441823, 0, 2, 1507359, 327680, 0, 1572895, 327680, 0, 1179680, 327680, 0, 1245216, 327680, 0, 1310752, 65536, 0, 1441824, 65536, 2, 1507360, 327680, 0, 1572896, 327680, 0, 1179681, 327680, 0, 1245217, 327680, 0, 1310753, 131072, 0, 1376289, 131072, 1, 1441825, 131072, 2, 1507361, 327680, 0, 1572897, 327680, 0, 1179682, 327680, 0, 1245218, 327680, 0, 1310754, 327680, 0, 1376290, 327680, 0, 1441826, 0, 0, 1507362, 0, 1, 1572898, 0, 2, 1179683, 327680, 0, 1245219, 327680, 0, 1310755, 327680, 0, 1376291, 327680, 0, 1441827, 65536, 0, 1572899, 65536, 2, 1179684, 327680, 0, 1245220, 327680, 0, 1310756, 327680, 0, 1376292, 327680, 0, 1441828, 131072, 0, 1507364, 131072, 1, 1572900, 131072, 2, 1048584, 1638400, 8, 917511, 1638400, 8, 983047, 1638400, 8, 1114120, 1638400, 8, 1179657, 1638400, 8, 1245193, 1638400, 8, 1310729, 1638400, 8, 1376265, 1638400, 8, 1376266, 1638400, 8, 589834, 1638400, 8, 589835, 1638400, 8, 589836, 1638400, 8, 589837, 1638400, 8, 589838, 1638400, 8, 589839, 1638400, 8, 589840, 1638400, 8, 589841, 1638400, 8, 589842, 1638400, 8, 589843, 1638400, 8, 917525, 1638400, 8, 983061, 1638400, 8, 1048597, 1638400, 8, 1048596, 1638400, 8, 1048595, 1638400, 8, 1048594, 1638400, 8, 1048593, 1638400, 8, 1048592, 1638400, 8, 1114128, 1638400, 8, 1179664, 1638400, 8, 1441812, 1638400, 8, 1441813, 1638400, 8, 1441814, 1638400, 8, 1441815, 1638400, 8, 1441816, 1638400, 8, 1441817, 1638400, 8, 1441818, 1638400, 8, 1441819, 1638400, 8, 1114142, 1638400, 8, 1048606, 1638400, 8, 983070, 1638400, 8, 917534, 1638400, 8, 851998, 1638400, 8, 786462, 1638400, 8, 786461, 1638400, 8, 851997, 1638400, 8, 720925, 1638400, 8, 720924, 1638400, 8, 720923, 1638400, 8, 720907, 917504, 12, 786443, 917504, 12, 851979, 917504, 12, 917515, 917504, 12, 983051, 917504, 12, 983050, 917504, 12, 1048587, 917504, 12, 1114124, 917504, 12, 1114125, 917504, 12, 1048589, 917504, 12, 983054, 917504, 12, 983055, 917504, 12, 917519, 917504, 12, 917520, 917504, 12, 917521, 917504, 12, 851985, 917504, 12, 851986, 917504, 12, 786450, 917504, 12, 720914, 917504, 12, 720913, 917504, 12, 720912, 917504, 12, 720911, 917504, 12, 720910, 917504, 12, 720909, 917504, 12, 720908, 917504, 12, 786444, 917504, 12, 851980, 917504, 12, 851981, 917504, 12, 917516, 917504, 12, 983052, 917504, 12, 1048588, 917504, 12, 917517, 917504, 12, 851982, 917504, 12, 786446, 917504, 12, 786445, 917504, 12, 786447, 917504, 12, 786448, 917504, 12, 786449, 917504, 12, 851984, 917504, 12, 851983, 917504, 12, 917518, 917504, 12, 983053, 917504, 12, 983063, 917504, 12, 1048599, 917504, 12, 1114135, 917504, 12, 1114134, 917504, 12, 1179670, 917504, 12, 1179669, 917504, 12, 1245205, 917504, 12, 1245204, 917504, 12, 1310741, 917504, 12, 1310742, 917504, 12, 1310743, 917504, 12, 1310744, 917504, 12, 1310745, 917504, 12, 1310746, 917504, 12, 1245210, 917504, 12, 1245211, 917504, 12, 1179674, 917504, 12, 1114138, 917504, 12, 1048602, 917504, 12, 983066, 917504, 12, 983065, 917504, 12, 983064, 917504, 12, 1048600, 917504, 12, 1114136, 917504, 12, 1114137, 917504, 12, 1048601, 917504, 12, 1179673, 917504, 12, 1245209, 917504, 12, 1245208, 917504, 12, 1245207, 917504, 12, 1245206, 917504, 12, 1179671, 917504, 12, 1179672, 917504, 12, 917528, 917504, 12, 1179661, 917504, 12, 720915, 917504, 12, 720906, 917504, 12)
layer_1/name = "Clearings"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Buildings"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Clearing1" parent="." instance=ExtResource("3_4eg3d")]
position = Vector2(48, 120)

[node name="Clearing2" parent="." instance=ExtResource("3_4eg3d")]
position = Vector2(328, 120)

[node name="Clearing3" parent="." instance=ExtResource("3_4eg3d")]
position = Vector2(200, 328)

[node name="Clearing4" parent="." instance=ExtResource("3_4eg3d")]
position = Vector2(464, 304)

[node name="Buttons" parent="." instance=ExtResource("5_ewvrq")]
position = Vector2(624, 120)
